# open-swe-python

./: .gitignore  LICENSE  README.md  open-swe-cli.py  open-swe-copilot.py  pyproject.toml  visuals.py
.github/: copilot-instructions.md
src/: __init__.py  config.py  enhanced_graph.py  graph.py  llm.py  state.py
src/agents/: __init__.py  manager.py  planner.py  programmer.py
src/tools/: __init__.py
tests/: conftest.py  test_agents.py
